@@ -1,3 +1,12 @@
+2011-01-13  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* subconnector.cc (ContInputSubconnector::receive): Update receive
+	buffer pointer for subsequent receives when large packages have
+	been split.
+
+	* BIFO.cc (BIFO::insertBlock): Fixes to logic when buffer has
+	wrapped around.
+
 2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0.7
